added some socials

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
     <main class = "container"> <!-- good for styling for CSS-->
         <section class = "about">
-        <h2> Hi, I'm Nicholas and I'm interested in computer science and biology!</h2>
-        <p> My personal website is currently in development!</p>
+        <h2> Hey, I'm Nicholas Djedjos!</h2>
+        <p> I'm a Columbia University student interested in computer science and biology.
+            I love to build exciting projects, from transcriptomic research to building software applications.
+        </p>
     </section>
 
     <section class = "interests">
@@ -29,11 +31,18 @@
 
     <section class ="projects">
         <h3>Projects</h3>
-        <p> While my website is currently underdevelopment, I'm working on some exciting projects that combine my passions. Stay tuned!</p>
+        <p> While my website is currently under development, I'm working on some exciting projects that highlight my passions. Stay tuned!</p>
     </section>
 
     <footer>
-        <p> Contact: <a href="mailto:nicholas@gmail.com">nicholas@gmail.com</a></p>
+        <!-- embed my links to image-->
+        <!-- <p> My LinkedIn: <a href = https://www.linkedin.com/in/nicholas-djedjos-72311a207>LinkedIn </a></p>
+        <p> My GitHub <a href=https://github.com/reformist>GitHub </a> </p> -->
+        <p> Feel free to connect on LinkedIn, check out my GitHub, and/or shoot me an email!</p>
+        <p> Contact Email: <a href="mailto:ndjedjos@gmail.com">ndjedjos@gmail.com</a></p>
+        <p><a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:50px;height:50px;"></a></p>
+        <p><a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a></p>
+        
     </footer>
 </body>
 
