--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <p> My GitHub <a href=https://github.com/reformist>GitHub </a> </p> -->
         <p> Feel free to connect on LinkedIn, check out my GitHub, and/or shoot me an email!</p>
         <p> Contact Email: <a href="mailto:ndjedjos@gmail.com">ndjedjos@gmail.com</a></p>
-        <p><a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:50px;height:50px;"></a></p>
-        <p><a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a></p>
+        <p><a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:25px;height:25px;"></a>
+        <a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a></p>
         
     </footer>
 </body>
