small edits spaces

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class = "about">
         <h2> Hey, I'm Nicholas Djedjos!</h2>
         <p> I'm a Columbia University student interested in computer science and biology.
-            I love to build exciting projects, from transcriptomic research to building software applications.
+            I love building exciting projects, from transcriptomic research to building software applications.
         </p>
     </section>
 
@@ -31,7 +31,8 @@
 
     <section class ="projects">
         <h3>Projects</h3>
-        <p> While my website is currently under development, I'm working on some exciting projects that highlight my passions. Stay tuned!</p>
+        <p> While my website is currently under development, I'm working on some exciting projects that highlight my passions like computationally repurposing 
+            pharmaceuticals and identifying groups of genes that stratify patient survival. Stay tuned!</p>
     </section>
 
     <footer>
@@ -40,9 +41,10 @@
         <p> My GitHub <a href=https://github.com/reformist>GitHub </a> </p> -->
         <p> Feel free to connect on LinkedIn, check out my GitHub, and/or shoot me an email!</p>
         <p> Contact Email: <a href="mailto:ndjedjos@gmail.com">ndjedjos@gmail.com</a></p>
-        <p><a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:25px;height:25px;"></a>
-        <a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a></p>
-        
+        <p>
+            <a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:25px;height:25px;"></a></p>
     </footer>
 </body>
 
