added photo, need to center div

--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
     <link rel= "stylesheet" href="style.css">
     <title> ABOUT PAGE</title>
     
-</head>
+</head> 
 
 <body>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href ="./resume.html">Resume</a>
+        <a href ="./projects.html">Projects</a>
+        <a href = "./activities.html">Activities</a>
+    </nav>
     <header>
         <h1> About Me</h1>
     </header>
 
     <main class = "container"> <!-- good for styling for CSS-->
-        <section class = "about">
+        <section class = "about"><!-- i can talk about my AoE project-->
         <h2> Hey, I'm Nicholas Djedjos!</h2>
         <p> I'm a Columbia University student interested in computer science and biology.
             I love building exciting projects, from transcriptomic research to building software applications.
         </p>
-    </section>
 
+            <div class="profile-image">
+                <img src="https://github.com/reformist/reformist.github.io/raw/main/attachments/Nicholas_Headshot.JPG" style="width:500px;height:400px;">
+            </div>
+    </section>
+    <!--https://github.com/reformist/reformist.github.io/raw/main/attachments/Nicholas_Headshot.JPG-->
     <section class = "interests">
         <h3>Interests</h3>
         <p> I enjoy exploring the intersection of technology and life sciences.</p>
@@ -42,9 +52,9 @@
         <p> Feel free to connect on LinkedIn, check out my GitHub, and/or shoot me an email!</p>
         <p> Contact Email: <a href="mailto:ndjedjos@gmail.com">ndjedjos@gmail.com</a></p>
         <p>
-            <a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" style="width:25px;height:25px;"></a>
+            <a href="https://www.linkedin.com/in/nicholas-djedjos-72311a207/"><img src="https://github.com/reformist/reformist.github.io/raw/main/attachments/linked_in_image.png" style="width:25px;height:25px;"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://github.com/reformist"><img src="https://pngimg.com/d/github_PNG83.png" style="width:25px;height:25px;"></a></p>
+            <a href="https://github.com/reformist"><img src="https://github.com/reformist/reformist.github.io/raw/main/attachments/pngimg.com%20-%20github_PNG83.png" style="width:25px;height:25px;"></a></p>
     </footer>
 </body>
 
