update resume and hyperlinks

--- a/activities.html
+++ b/activities.html
@@ -18,3 +18,7 @@
         <a href ="./projects.html">Projects</a>
         <a href = "./activities.html">Activities</a>
     </nav>
+
+    <header>
+        <h1> Work in progress! </h1>
+    </header>
