--- a/resume.html
+++ b/resume.html
@@ -20,9 +20,12 @@
     </nav>
 
 <section class = "resume-download-button">
-    <h3>For Resume: <a href="https://github.com/reformist/reformist.github.io/raw/main/attachments/NicholasDjedjosResume%20(1)%20(1).pdf">Download</h3>
+    <h3>For Resume: <a href="https://github.com/reformist/reformist.github.io/raw/main/attachments/NicholasDjedjosResume%20(1)%20(1).pdf">Download</a></h3>
 <!-- <section class = "cv-download-button">
     <h3> For CV Download</h3>
 </section> -->
+<section class = "cv-download-button">
+    <h3>For CV: <a href = "https://github.com/reformist/reformist.github.io/raw/main/attachments/ND_CV%20(10)%20(1)%20(1).pdf">Download</a></h3>
+</section>
 
 </section>
